tests/sessions/python/activities/exception.txtar
before
-- main.py:main --
import autokitteh


def main(event: autokitteh.Event):
	print('before')
	step()
	print('after')  # shouldn't get here


@autokitteh.activity
def step():
	1/0

-- error.txt --
error: ZeroDivisionError('division by zero')

Traceback (most recent call last):
   ak-runner
    value = fn(*args, **kw)
  File "main.py", line 6, in main
    step()
  File "main.py", line 12, in step
    1/0
    ~^~
ZeroDivisionError: division by zero
